Fix Logo Not Showing

--- a/public_html/assets/guest/css/main.css
+++ b/public_html/assets/guest/css/main.css
@@ -2875,9 +2875,9 @@ span {
   border-radius: 4px;
   border: 1px solid rgba(155, 155, 155, 0.32);
   background: #1C1C1C;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 500;
-  padding: 10px 16px;
+  padding: 5px;
 }
 .gt-footer-widget-wrapper-2 .footer-left .contact-list li img {
   margin-right: 8px;
@@ -7273,6 +7273,11 @@ span {
   .scroll-down-hero-banner-img-desktop {
     display: none;
   }
+}
+
+.logo-link img {
+  width: 200px;
+  height: auto;
 }
  
 .fixed-height-img {
